# Engenharia-de-Software-II

./: .gitignore  README.md  render.yaml  requirements.txt  sonar-project.properties  testes.coveragerc
servico-aluguel/: .coverage  .coveragerc  .env.example  Dockerfile  coverage.xml  db.json  main.py  pyproject.toml  sonar-project.properties
servico-aluguel/database/: database.py  init_data.py
servico-aluguel/models/: aluguel_model.py  cartao_model.py  ciclista_model.py  erro_model.py  funcionario_model.py
servico-aluguel/repositories/: aluguel_repository.py  cartao_repository.py  ciclista_repository.py  funcionario_repository.py
servico-aluguel/routers/: admin.py  aluguel.py  cartao.py  ciclista.py  funcionario.py
servico-aluguel/services/: email_service.py  equipamento_service.py  pagamento_service.py
servico-aluguel/tests/: conftest.py  test_admin_endpoints.py  test_aluguel_repository.py  test_cartao_endpoints.py  test_cartao_model.py  test_cartao_repository.py  test_ciclista_endpoints.py  test_ciclista_model.py  test_ciclista_repository.py  test_funcionario_endpoints.py  test_funcionario_model.py  test_funcionario_repository.py  test_status_endpoint.py
servico-aluguel/tests/integration/: __init__.py  (+4 more)
servico-equipamento/: .coverage  .coveragerc  .env.example  COMO_EXECUTAR.md  Dockerfile  ENDPOINTS_BICICLETA.md  ENDPOINTS_TRANCA.md  ESTRUTURA_PROJETO.md  GUIA_TESTES_COMPLETO.md  IMPLEMENTACAO_BANCO.md  README.md  RESUMO_IMPLEMENTACAO_TRANCAS.md  RESUMO_TESTES_BICICLETAS.md  RESUMO_TESTES_TOTENS.md  RESUMO_TESTES_TRANCAS.md  SONARCLOUD_SETUP.md  TESTES_EXECUTIVO.md  TESTES_EXECUTIVO_FINAL.md  TESTES_README.md  TODOS_OS_ENDPOINTS.md  TROUBLESHOOTING.md  coverage.xml  exemplo_banco.py  main.py  pyproject.toml  sonar-project.properties  test_bicicleta_endpoints.py  test_endpoint.py  test_totem_endpoints.py  test_tranca_manual.py
servico-equipamento/database/: DATABASE_README.md  database.py  equipamentos.json  init_data.py
servico-equipamento/models/: auditoria_model.py  bicicleta_model.py  erro_model.py  status_model.py  totem_model.py  tranca_model.py
servico-equipamento/repositories/: auditoria_repository.py  bicicleta_repository.py  totem_repository.py  tranca_repository.py
servico-equipamento/routers/: admin.py  bicicleta.py  status.py  totem.py  tranca.py
servico-equipamento/services/: __init__.py  aluguel_service.py  email_service.py  equipamento_service.py
servico-equipamento/tests/: conftest.py  test_auditoria_repository.py  test_bicicleta_endpoints.py  test_integration_external_services.py  test_status_endpoint.py  test_totem_endpoints.py  test_tranca_endpoints.py
servico-equipamento/utils/: __init__.py  error_handler.py  validators.py
servico-externo/: .coverage  .coveragerc  .env.example  Dockerfile  README.md  config.env.example  coverage.xml  main.py  pyproject.toml  servico-externo.json  sonar-project.properties
servico-externo/database/: database.py  externos.json  init_data.py
servico-externo/models/: cartao_model.py  cobranca_model.py  email_model.py  erro_model.py  status_model.py
servico-externo/repositories/: cartao_repository.py  cobranca_repository.py  email_repository.py
servico-externo/routers/: admin.py  cartao.py  cobranca.py  email.py  status.py
servico-externo/services/: email_service.py
servico-externo/tests/: conftest.py  test_admin_endpoints.py  test_cartao_endpoints.py  test_cobranca_endpoints.py  test_email_endpoints.py  test_repositories.py  test_status_endpoint.py  test_status_model.py
(+2 files in other folders)
