[tool.poetry]
name = "servico-equipamento"
version = "0.1.0"
description = "Microsserviço de Equipamentos do Sistema de Controle de Bicicletário (SCB)"
authors = ["leopranzl07@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false 


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
tinydb = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuração opcional para ferramentas de qualidade, como Sonar ou flake8 (pode ser ajustado depois)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
