[tool.poetry]
name = "servico-externo"
version = "0.1.0"
description = "Microsserviço de Serviços Externos do Sistema de Controle de Bicicletário (SCB)"
authors = ["leopranzl07@gmail.com"]
license = "MIT"
readme = "README.md"
package-mode = false 


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = {extras = ["email"], version = "^2.4.2"}
tinydb = "^4.8.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuração opcional para ferramentas de qualidade, como Sonar ou flake8 (pode ser ajustado depois)
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=routers --cov=repositories --cov=models --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
    "exemplo_banco.py",
    "test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true

